# webview-ipc-app

./: .gitattributes  .gitignore  Cargo.toml  README.md  build-env.md  build_installer.py  create_update.py  exportOptions.plist  generate_icons.py  installer.iss  xmake.lua
.github/workflows/: build.yml
src/: ipc.rs  main.rs  web_server.rs  webview.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
