[package]
name = "webview-ipc-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
url = "2.2"

[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2"

[target.'cfg(windows)'.dependencies]
tokio-uds-windows = "0.1"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]